--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -121,6 +121,12 @@
 <li>Add info  </li>
 <li>Add info </li>
 </ul>
+<h5>Remitting deductions on the payment</h5>
+<p>Generally, you must remit the following deductions on the self-employment income paid to a self-employed fisher, a barber, a hairdresser or a driver :</p>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-check fa-li text-success"></span> EI <small>- Remit on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
+</ul>
+
 <p>Learn more: add link</p>
 </li>
 </ul>
@@ -205,60 +211,68 @@
  <details id="tab3">
         <summary>Self-employed</summary>
 
-<h3>Income tax obligations</h3>
-<p>Add info </p>
-
-<h3>Payroll obligations</h3>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h4>Self-employed worker</h4>
-
-<h5>Income tax and contributions obligations</h5>
+ <details><summary>Self-employed <strong>workers</strong></summary>
+<h3>Reporting on return</h3>
+<p>Generally, the self-employed worker must report on the following return:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> Income Tax <small>- Calculate the amount of income tax when filling out the <strong>T1 income tax and benefit return</strong></small> </li>	
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- Calculate the amount to contribute only if you participate in the special EI program when filling out the <strong>T1 income tax and benefit return</strong></small></li>
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- Calculate the amount to contribute when filling out the <strong>T1 income tax and benefit return</strong> (both employer and employee portion)</small></li> 
-<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- Calculate the amount to contribute when filling out the <strong>Quebec income tax return</strong></small></li>
+<li><span class="fas fa-check fa-li text-success"></span> T1 return <small> </small></li>	
 </ul>
 
-<h5>GST/HST remitting obligations</h5>
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/business-expenses.html">Business expenses self-employed workers may deduct</a></p>
+
+
+<h3>Calculating and reporting payroll deductions</h3>
+<p>Generally, the self-employed worker calculates and reports the following amounts when they fill out the <strong>T1 income tax and benefit return</strong>:</p>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-check fa-li text-success"></span> Income Tax <small> </small> </li>
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if you participate in the special EI program</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
+<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> for self-employed employees working in <strong>Quebec</strong></small></li>
+</ul>
+
+<p class="mrgn-tp-lg">Learn more: </p>
+<ul>
+<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/contributions.html">Contributions to the Canada Pension Plan</a></li>
+<li> <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></li>
+<li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
+</ul>
+
+<h3>Remitting GST/HST </h3>
+<p>Generally, you must remit the following on business expenses made by the self-employed worker:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> GST/HST <small>in certain situations </small></li>	
 </ul>
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
 
-<h5>Reporting obligations</h5>
+ </details>
+
+<details><summary>Payments made to self-employed workers - <strong>Payers</strong></summary>
+
+<h3>Withholding payroll deductions</h3>
+<p>Generally, you <strong>do not</strong> withhold the following deductions on the payment made to the self-employed worker:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T1 or T2 return <small> </small></li>	
-</ul>
-<p class="mrgn-tp-lg">Learn more:</p>
-<ul>
-<li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/business-expenses.html">Business expenses self-employed workers may deduct</a></li>
-<li> <a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/contributions.html">Contributions to the Canada Pension Plan</a></li>
-<li> <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></li>
-<li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
-<li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></li>
-</ul>
-</li>
-<li class="cnjnctn-col"><h4>Payment made to a self-employed worker</h4>
-<h5>Withholding and remitting obligations</h5>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li> 	
 <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
+</ul>
+<p class="mrgn-tp-lg">Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
+
+<h3>Remitting GST/HST </h3>
+<p>Generally, you <strong>do not</strong> remit the following on the payment made to the self-employed worker:</p>
+<ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-times text-danger fa-li"></span> GST/HST <small>- <strong>Do not</strong> remit</small></li> 
 </ul>
-
-<h5>Reporting obligations</h5>
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
+ 
+<h3>Reporting the payment on a slip</h3>
+<p>Generally, you must report the self-employed income paid to the worker on the following slip:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T4A slip <small>- Generally, report the <strong>self-employed income</strong> </small></li>	
+<li><span class="fas fa-check fa-li text-success"></span> T4A slip <small> </small></li>	
 </ul>
+<p class="mrgn-tp-lg">Learn more: <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 
-<p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 
-</li>
-</ul>
-	 
-<h3>GST/HST obligations</h3>
-<p>Add info </p>
+ </details>
 
 </details>
 </div></div>
