--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -210,7 +210,7 @@
 </details>
  <details id="tab3">
         <summary>Self-employed</summary>
-
+<p>Understand the tax obligations depending on one of the following situation:</p>
  <details><summary>Self-employed <strong>workers</strong></summary>
 <h3>Reporting on return</h3>
 <p>Generally, the self-employed worker must report on the following return:</p>
@@ -246,7 +246,7 @@
 
  </details>
 
-<details><summary>Payments made to self-employed workers - <strong>Payers</strong></summary>
+<details><summary>Payments made to a self-employed worker <strong>(payer)</strong></summary>
 
 <h3>Withholding payroll deductions</h3>
 <p>Generally, you <strong>do not</strong> withhold the following deductions on the payment made to the self-employed worker:</p>
