--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -238,7 +238,7 @@
 </ul>
 
 <h3>Remitting GST/HST </h3>
-<p>Generally, you must remit the following on business expenses made by the self-employed worker:</p>
+<p>Generally, the self-employed worker remits the following on the payment made by them:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> GST/HST <small>in certain situations </small></li>	
 </ul>
@@ -248,12 +248,12 @@
 
 <details><summary>Payments made to a self-employed worker <strong>(payer)</strong></summary>
 
-<h3>Withholding payroll deductions</h3>
-<p>Generally, you <strong>do not</strong> withhold the following deductions on the payment made to the self-employed worker:</p>
+<h3>Withholding and remitting payroll deductions</h3>
+<p>Generally, you <strong>do not</strong> withhold or remit the following deductions on the payment made to the self-employed worker:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li> 	
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold or remit</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold or remit</small></li> 	
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong>withhold or remit</small></li> 
 </ul>
 <p class="mrgn-tp-lg">Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
 
@@ -264,14 +264,19 @@
 </ul>
 <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
  
-<h3>Reporting the payment on a slip</h3>
-<p>Generally, you must report the self-employed income paid to the worker on the following slip:</p>
+<h3>Reporting the payment on the self-employed worker's slip</h3>
+<p>Generally, the payer must report the payment made to the self-employed worker on the following slip:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> T4A slip <small> </small></li>	
 </ul>
 <p class="mrgn-tp-lg">Learn more: <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 
-
+<h3>Reporting the payment on the payer's income tax return</h3>
+<p>Generally, the payer must report the payment made to the self-employed worker on one of the following income tax return as a business expense:</p>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-check fa-li text-success"></span> T1 return <small>- On line XXX or schedule XXX </small></li>
+<li><span class="fas fa-check fa-li text-success"></span> T2 return <small>- On line XXX or schedule XXX  </small></li>	
+</ul>
  </details>
 
 </details>
