--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -213,7 +213,7 @@
 <p>Understand the tax obligations depending on one of the following situation:</p>
  <details><summary>Self-employed <strong>workers</strong></summary>
 <h3>Reporting on return</h3>
-<p>Generally, the self-employed worker must report on the following return:</p>
+<p>Generally, the self-employed worker must report on their following return:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> T1 return <small> </small></li>	
 </ul>
@@ -222,7 +222,7 @@
 
 
 <h3>Calculating and reporting payroll deductions</h3>
-<p>Generally, the self-employed worker calculates and reports the following amounts when they fill out the <strong>T1 income tax and benefit return</strong>:</p>
+<p>Generally, the self-employed worker calculates and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> Income Tax <small> </small> </li>
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if you participate in the special EI program</small></li>
@@ -249,7 +249,7 @@
 <details><summary>Payments made to a self-employed worker <strong>(payer)</strong></summary>
 
 <h3>Withholding and remitting payroll deductions</h3>
-<p>Generally, you <strong>do not</strong> withhold or remit the following deductions on the payment made to the self-employed worker:</p>
+<p>Generally, the payer <strong>does not</strong> withhold or remit the following deductions on the payment made to the self-employed worker:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold or remit</small></li>
 <li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold or remit</small></li> 	
@@ -258,7 +258,7 @@
 <p class="mrgn-tp-lg">Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
 
 <h3>Remitting GST/HST </h3>
-<p>Generally, you <strong>do not</strong> remit the following on the payment made to the self-employed worker:</p>
+<p>Generally, the payer <strong>does not</strong> remit the following on the payment made to the self-employed worker:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-times text-danger fa-li"></span> GST/HST <small>- <strong>Do not</strong> remit</small></li> 
 </ul>
@@ -272,7 +272,7 @@
 <p class="mrgn-tp-lg">Learn more: <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 
 <h3>Reporting the payment on the payer's income tax return</h3>
-<p>Generally, the payer must report the payment made to the self-employed worker on one of the following income tax return as a business expense:</p>
+<p>Generally, the payer must report the payment made to the self-employed worker on one of their following income tax return as a business expense:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> T1 return <small>- On line XXX or schedule XXX </small></li>
 <li><span class="fas fa-check fa-li text-success"></span> T2 return <small>- On line XXX or schedule XXX  </small></li>	
