--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -246,7 +246,7 @@
 
  </details>
 
-<details><summary>Payments made to a self-employed worker <strong>(payer)</strong></summary>
+<details><summary>Payments made to self-employed workers <strong>(payer)</strong></summary>
 
 <h3>Withholding and remitting payroll deductions</h3>
 <p>Generally, the payer <strong>does not</strong> withhold or remit the following deductions on the payment made to the self-employed worker:</p>
