--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -212,19 +212,18 @@
         <summary>Self-employed</summary>
 <p>Understand the tax obligations depending on one of the following situation:</p>
  <details><summary>Self-employed <strong>workers</strong></summary>
-<h3>Reporting on return</h3>
-<p>Generally, the self-employed worker must report on their following return:</p>
+<h3>Income tax obligations</h3>
+<p>Generally, the self-employed worker calculates and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T1 return <small> </small></li>	
+<li><span class="fas fa-check fa-li text-success"></span> Income Tax <small> </small> </li>	
 </ul>
 
 <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/business-expenses.html">Business expenses self-employed workers may deduct</a></p>
 
 
-<h3>Calculating and reporting payroll deductions</h3>
-<p>Generally, the self-employed worker calculates and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
+<h3>CPP/QPP, EI and QPP obligations</h3>
+<p>Generally, the self-employed worker calculates their contributions and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> Income Tax <small> </small> </li>
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the self-employed worker  participates in the special EI program</small></li>
 <li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
 <li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the self-employed worker works in the  <strong>Province of Quebec</strong></small></li>
@@ -237,7 +236,7 @@
 <li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
 </ul>
 
-<h3>Remitting GST/HST </h3>
+<h3>GST/HST obligations</h3>
 <p>Generally, the self-employed worker remits the following on the payment made by them:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> GST/HST <small>in certain situations </small></li>	
