--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -211,7 +211,8 @@
  <details id="tab3">
         <summary>Self-employed</summary>
 <p>Understand the tax obligations depending on one of the following situation:</p>
- <details><summary>Self-employed <strong>workers</strong></summary>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"> <details><summary>Self-employed <strong>workers</strong></summary>
 <h3>Income tax obligations</h3>
 <p>Generally, the self-employed worker calculates and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
 <ul class="fa-ul mrgn-bttm-md">
@@ -243,8 +244,9 @@
 </ul>
 <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
 
- </details>
+ </details></li>	
 
+<li class="cnjnctn-col">
 <details><summary>Payments made to self-employed workers <strong>(payer)</strong></summary>
 
 <h3>Withholding and remitting payroll deductions</h3>
@@ -277,7 +279,8 @@
 <li><span class="fas fa-check fa-li text-success"></span> T2 return <small>- On line XXX or schedule XXX  </small></li>	
 </ul>
  </details>
-
+</li>	
+</ul>
 </details>
 </div></div>
   
