--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -92,17 +92,17 @@
 
 <p>Depending if the worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong> the tax obligations may be different.</p>
 
-<p>Understanding the tax obligations based on the type of worker:</p>
+<p>Understanding the tax obligations based on the type of relationship:</p>
 <ul>
-<li><a href="#tab1" class="wb-tabs-ext">Employee</a> </li>
-<li><a href="#tab2" class="wb-tabs-ext">Incorporated employee</a> (personal services business)</li>
-<li><a href="#tab3" class="wb-tabs-ext">Self-employed</a></li>
+<li><a href="#tab1" class="wb-tabs-ext">Employee/employer</a> </li>
+<li><a href="#tab2" class="wb-tabs-ext">Incorporated employee/payer</a> (personal services business)</li>
+<li><a href="#tab3" class="wb-tabs-ext">Self-employed/payer</a></li>
 </ul>   
 
  <div class="wb-tabs">
                <div class="tabpanels">
     <details id="tab1">
-        <summary>Employee</summary>
+        <summary>Employee/employer</summary>
 
 <h3>Income tax obligations</h3>
 <p>Add info </p>
@@ -139,7 +139,7 @@
 </details>
 
  <details id="tab2">
-        <summary>Incorporated employee</summary>
+        <summary>Incorporated employee/payer</summary>
 
 <p>PSB's have different tax obligations.</p>
 <h3>Income tax obligations</h3>
@@ -209,7 +209,7 @@
 
 </details>
  <details id="tab3">
-        <summary>Self-employed</summary>
+        <summary>Self-employed/payer</summary>
 <p>Understand the tax obligations depending on one of the following situation:</p>
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"> <details><summary>Self-employed <strong>workers</strong></summary>
