--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -94,15 +94,15 @@
 
 <p>Understanding the tax obligations based on the type of relationship:</p>
 <ul>
-<li><a href="#tab1" class="wb-tabs-ext">Employee/employer</a> </li>
-<li><a href="#tab2" class="wb-tabs-ext">Incorporated employee/payer</a> (personal services business)</li>
-<li><a href="#tab3" class="wb-tabs-ext">Self-employed/payer</a></li>
+<li><a href="#tab1" class="wb-tabs-ext">Employee/Employer</a> </li>
+<li><a href="#tab2" class="wb-tabs-ext">Incorporated employee/Payer</a> (personal services business)</li>
+<li><a href="#tab3" class="wb-tabs-ext">Self-employed/Payer</a></li>
 </ul>   
 
  <div class="wb-tabs">
                <div class="tabpanels">
     <details id="tab1">
-        <summary>Employee/employer</summary>
+        <summary>Employee/Employer</summary>
 
 <h3>Income tax obligations</h3>
 <p>Add info </p>
@@ -139,11 +139,20 @@
 </details>
 
  <details id="tab2">
-        <summary>Incorporated employee/payer</summary>
+        <summary>Incorporated employee/Payer</summary>
 
-<p>PSB's have different tax obligations.</p>
+<p>Incorporated employees and payers have different tax obligations if the PSB <strong>perform the services on behalf of their own corporation</strong>. Incorporated employees in this situation is considered a personal services business (PSB).</p>
+
+<p>Understand the tax obligations depending on one of the following situation:</p>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"> <details><summary>PSB <strong>workers</strong></summary>
 <h3>Income tax obligations</h3>
-<p>For a PSB, the income tax obligations are different than other corporations. </p>
+<p>Generally, the PSB must:</p>
+<ul class="fa-ul">
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> File a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">T2 Corporation Income Tax Return</a> - The PSB is <strong>not eligible</strong> to claim the same tax deductions and expenses </li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> - Same as regular Corporations</li>
+<li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/t4-slip.html">T4 slips</a> for any employees of their corporation (same as regular corporations)</li>
+</ul>
 
 <details><summary>Tax deductions and tax rates</summary>
 <p>A PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
@@ -165,28 +174,28 @@
 </ul>
 </details>
 
-<h4>Filing and payment obligations</h4>
-<ul class="fa-ul">
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> File a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">T2 Corporation Income Tax Return</a> for the PSB (<strong>not eligible</strong> to claim the same tax deductions and expenses) </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> (same as regular Corporations) </li>
+<p class="mrgn-tp-lg">Learn more: <a href="">Add here</a></p>
+
+
+<h3>CPP/QPP, EI and QPP obligations</h3>
+<p>Generally, the self-employed worker calculates their contributions and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the self-employed worker  participates in the special EI program</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
+<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the self-employed worker works in the  <strong>Province of Quebec</strong></small></li>
 </ul>
 
-<h3>Payroll obligations</h3>
-<p>For payments made to a worker that is a PSB, the payroll tax obligations are different than other corporations. </p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h4>Personal services business</h4>
-<ul class="fa-ul">
-<li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/t4-slip.html">T4 slips</a> for any employees of their corporation (same as regular corporations)</li>
+<p class="mrgn-tp-lg">Learn more: </p>
+<ul>
+<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/contributions.html">Contributions to the Canada Pension Plan</a></li>
+<li> <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></li>
+<li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
 </ul>
-</li>
-<li class="cnjnctn-col"><h4>Payment made to an incorporated employee</h4>
-<ul class="fa-ul">
-<li><span class="fas fa-times text-danger fa-li fa-lg"> </span> <strong>Does not </strong>deduct income tax, CPP contributions or EI premiums from the PSB (worker).  </li>
-<li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out a T4A slip (or T4A-NR, T5018 or T1204 slip depending on the situation of the PSB). </li>
-</ul>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/fees-other.html">Payments of fees for services</a>.</p>
-</li>
-</ul>
+
+<h3>GST/HST obligations</h3>
+<p>For the PSB, the GST/HST obligations are the same as other corporations. </p>
+
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
 
 <details><summary>Examples of non-compliance for PSB corporations</summary>
 <p>Examples of <strong>non-compliance</strong> situation for PSB corporations: </p>
@@ -200,16 +209,49 @@
 </ul>
 </details>
 
-<h3>GST/HST obligations</h3>
-<p>For a PSB, the GST/HST obligations are the same as other corporations. </p>
+ </details></li>	
 
-<h3>Withholding, filing and payment obligations</h3>
-<p><span class="fas fa-check fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Withhold, file and remit the GST/HST</a> (same as regular Corporations) </p>
+<li class="cnjnctn-col"><details><summary>Payments made to incorporated employees <strong>(payer)</strong></summary>
+
+<h3>Withholding and remitting payroll deductions</h3>
+<p>Generally, the payer <strong>does not</strong> withhold or remit the following deductions on the payment made to the worker who is a PSB:</p>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold or remit</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold or remit</small></li> 	
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong>withhold or remit</small></li> 
+</ul>
+<p class="mrgn-tp-lg">Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
+
+
+<h3>Remitting GST/HST </h3>
+<p>Generally, the payer <strong>does not</strong> remit the following on the payment made to the worker who is a PSB:</p>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-times text-danger fa-li"></span> GST/HST <small>- <strong>Do not</strong> remit</small></li> 
+</ul>
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
+ 
+<h3>Reporting the payment on the PSB's slip</h3>
+<p>Generally, the payer must report the payment made to the worker who is a PSB on the following slip:</p>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-check fa-li text-success"></span> T4A slip (or T4A-NR, T5018 or T1204 slip depending on the situation of the PSB)</li>	
+</ul>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/fees-other.html">Payments of fees for services</a>.</p>
+
+<h3>Reporting the payment on the payer's income tax return</h3>
+<p>Generally, the payer must report the payment made to the worker who is a PSB on one of their following income tax return as a business expense:</p>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-check fa-li text-success"></span> T1 return <small>- On line XXX or schedule XXX </small></li>
+<li><span class="fas fa-check fa-li text-success"></span> T2 return <small>- On line XXX or schedule XXX  </small></li>	
+</ul>
+ </details>
+</li>	
+</ul>
+
 
 
 </details>
  <details id="tab3">
-        <summary>Self-employed/payer</summary>
+        <summary>Self-employed/Payer</summary>
 <p>Understand the tax obligations depending on one of the following situation:</p>
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"> <details><summary>Self-employed <strong>workers</strong></summary>
