--- a/sred/scientific-research-experimental-development-tax-incentive-program/after.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/after.html
@@ -121,7 +121,7 @@
 <h2 id="h4">If your claim needs a review</h2>
 <p>Some claims may be selected for further review. The purpose of a review is to gather the necessary information for the CRA to make a decision about a claim.</p>
 		 <p>If your claim requires a review, it&rsquo;s because the CRA requires further information about the work or expenditures being claimed.</p>
-<p>In some cases, the CRA may request an on-site or vitual meeting to ask further questions or clarify details. You may be asked to provide <a href="https://test.canada.ca/cra-arc/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html#h3">supporting records</a> to help reviewers understand the work done, and how expenses  associated with the work were determined.</p>		 
+<p>In some cases, the CRA may request an on-site or virtual meeting to ask further questions or clarify details. You may be asked to provide <a href="https://test.canada.ca/cra-arc/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html#h3">supporting records</a> to help reviewers understand the work done, and how expenses  associated with the work were determined.</p>		 
 <p> We recommend senior technical and financial personnel be available to provide in-depth knowledge of the work and the company&rsquo;s finances.</p>
 <p>The review may result in adjustments to your claim. We will provide you with a  report outlining the outcome.</p>
 <p>For detailed information about the technical review, refer to <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/technical-review-a-guide-claimants.html">The  SR&amp;ED Technical Review: A Guide for Claimants</a>.</p>
