--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -141,7 +141,7 @@
  <details id="tab2">
         <summary>Incorporated employee/Payer</summary>
 
-<p>Incorporated employees and payers have different tax obligations if the PSB <strong>perform the services on behalf of their own corporation</strong>. Incorporated employees in this situation is considered a personal services business (PSB).</p>
+<p>Incorporated employees and payers have different tax obligations if the incorporated employees <strong>perform the services on behalf of their own corporation</strong>. Incorporated employees in this situation is considered a personal services business (PSB).</p>
 
 <p>Understand the tax obligations depending on one of the following situation:</p>
 <ul class="list-unstyled cnjnctn-type-or">
