--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -147,32 +147,13 @@
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"> <details><summary>PSB <strong>workers</strong></summary>
 <h3>Income tax obligations</h3>
+<p>The <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions, tax rates and eligible expenses <span class="far fa-question-circle"></span></a> are different for a PSB.</p>
 <p>Generally, the PSB must:</p>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> File a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">T2 Corporation Income Tax Return</a> - The PSB is <strong>not eligible</strong> to claim the same tax deductions and expenses </li>
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> - Same as regular Corporations</li>
 <li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/t4-slip.html">T4 slips</a> for any employees of their corporation (same as regular corporations)</li>
 </ul>
-
-<details><summary>Tax deductions and tax rates</summary>
-<p>A PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
-<p><span class="fas fa-times text-danger fa-lg"> </span> A PSB is <strong>not eligible </strong>for:</p>
-
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">General tax rate reduction</a>  </li>
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">Small business deduction</a> </li>
-</ul>
-</details>
-<details><summary>Eligible expenses</summary>
-<p>A PSB is <strong>limited </strong>to <strong>all</strong> of the following deduction expenses: </p>
-
-<ul class="fa-ul">
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Salary and wages the corporation pays to its incorporated employee(s) </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Any benefit or allowance the corporation provides to its incorporated employee(s) </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
-</ul>
-</details>
 
 <p class="mrgn-tp-lg">Learn more: <a href="">Add here</a></p>
 
@@ -349,7 +330,28 @@
 </ul>
 
 
+<section id="psb-special" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Tax deductions, tax rates and eligible expenses for a PSB</h2>
+	</header>	<div class="modal-body">		
+	
+<p>A PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
+<p><span class="fas fa-times text-danger fa-lg"> </span> A PSB is <strong>not eligible </strong>for:</p>
 
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">General tax rate reduction</a>  </li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">Small business deduction</a> </li>
+</ul>
+
+<h3>Eligible expenses</h3>
+<p>A PSB is <strong>limited </strong>to <strong>all</strong> of the following deduction expenses: </p>
+<ul class="fa-ul">
+<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Salary and wages the corporation pays to its incorporated employee(s) </li>
+<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Any benefit or allowance the corporation provides to its incorporated employee(s) </li>
+<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts </li>
+<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
+</ul>
+
+
+	</div></section>
 
 
 
