--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -150,9 +150,9 @@
 <p>The <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions, tax rates and eligible expenses <span class="far fa-question-circle"></span></a> are different for a PSB.</p>
 <p>Generally, the PSB must:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> File a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">T2 Corporation Income Tax Return</a> - The PSB is <strong>not eligible</strong> to claim the same tax deductions and expenses </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> - Same as regular Corporations</li>
-<li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/t4-slip.html">T4 slips</a> for any employees of their corporation (same as regular corporations)</li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> File a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">T2 Corporation Income Tax Return</a> <small>- <strong>Not eligible</strong> to claim the same tax deductions and expenses</small></li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> <small> - Same as regular corporations</small> </li>
+<li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/t4-slip.html">T4 slips</a> for any employees of their corporation <small>- Same as regular corporations</small> </li>
 </ul>
 
 <p class="mrgn-tp-lg">Learn more: <a href="">Add here</a></p>
@@ -192,7 +192,7 @@
 
  </details></li>	
 
-<li class="cnjnctn-col"><details><summary>Payments made to incorporated employees <strong>(payer)</strong></summary>
+<li class="cnjnctn-col"><details><summary>Payments made to PSBs <strong>(payer)</strong></summary>
 
 <h3>Withholding and remitting payroll deductions</h3>
 <p>Generally, the payer <strong>does not</strong> withhold or remit the following deductions on the payment made to the worker who is a PSB:</p>
