--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -333,13 +333,15 @@
 <section id="psb-special" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Tax deductions, tax rates and eligible expenses for a PSB</h2>
 	</header>	<div class="modal-body">		
 	
-<p>A PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
+<h3>Tax deductions and tax rates</h3>
 <p><span class="fas fa-times text-danger fa-lg"> </span> A PSB is <strong>not eligible </strong>for:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">General tax rate reduction</a>  </li>
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">Small business deduction</a> </li>
 </ul>
+<p>This means that a PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
+
 
 <h3>Eligible expenses</h3>
 <p>A PSB is <strong>limited </strong>to <strong>all</strong> of the following deduction expenses: </p>
