--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -147,23 +147,22 @@
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col"> <details><summary>PSB <strong>workers</strong></summary>
 <h3>Income tax obligations</h3>
-<p>The <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions, tax rates and eligible expenses <span class="far fa-question-circle"></span></a> are different for a PSB.</p>
+
 <p>Generally, the PSB must:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> File a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">T2 Corporation Income Tax Return</a> <small>- <strong>Not eligible</strong> to claim the same tax deductions and expenses</small></li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> File a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">T2 corporation income tax return</a> <small>- <strong>Not eligible</strong> to claim the same <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions and expenses <span class="far fa-question-circle"></span></a></small></li>
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> <small> - Same as regular corporations</small> </li>
-<li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/t4-slip.html">T4 slips</a> for any employees of their corporation <small>- Same as regular corporations</small> </li>
+<li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/t4-slip.html">T4 slips</a> for any employees of the PSB's corporation <small>- Same as regular corporations</small> </li>
 </ul>
 
-<p class="mrgn-tp-lg">Learn more: <a href="">Add here</a></p>
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations.html">Corporations</a></p>
 
-
-<h3>CPP/QPP, EI and QPP obligations</h3>
-<p>Generally, the self-employed worker calculates their contributions and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
+<h3>CPP/QPP, EI and QPIP obligations</h3>
+<p>Generally, the PSB worker calculates their contributions and reports the following amounts when they fill out their <strong>T2 corporation income tax return</strong>:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the self-employed worker  participates in the special EI program</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
-<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the self-employed worker works in the  <strong>Province of Quebec</strong></small></li>
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the PSB worker participates in the special EI program</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employerr and employee portion</small></li> 
+<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the PSB worker works in the  <strong>Province of Quebec</strong></small></li>
 </ul>
 
 <p class="mrgn-tp-lg">Learn more: </p>
@@ -177,18 +176,17 @@
 <p>For the PSB, the GST/HST obligations are the same as other corporations. </p>
 
 <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
+<h3>Example of non-compliance</h3>
 
-<details><summary>Examples of non-compliance for PSB corporations</summary>
 <p>Examples of <strong>non-compliance</strong> situation for PSB corporations: </p>
 <ul>
-<li>Not reported non-active business income on line 207 of the T2 returns and they did not complete Schedule 7 </li>
-<li>Claimed the small business deduction on line 430 of the T2  return </li>
-<li>Claimed other deductions that was not allowed on the T2 return </li>
-<li>Claimed salary expense on the T2 return </li>
-<li>Not filed T2 returns </li>
-<li>Not registered for the GST/HST or filed the required returns </li>
+<li>Not reporting non-active business income on line 207 of the T2 returns and did not complete Schedule 7 </li>
+<li>Claiming the small business deduction on line 430 of the T2  return </li>
+<li>Claiming other deductions that was not allowed on the T2 return </li>
+<li>Claiming salary expense on the T2 return </li>
+<li>Not filing T2 returns </li>
+<li>Not registering for the GST/HST or filed the required returns </li>
 </ul>
-</details>
 
  </details></li>	
 
