--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -102,7 +102,7 @@
  <div class="wb-tabs">
                <div class="tabpanels">
     <details id="tab1">
-        <summary>Employee/Employer<br></summary>
+        <summary>Employee/Employer</summary>
 
 <h3>Income tax obligations</h3>
 <p>Add info </p>
